--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 
 	<footer>
 		<h2 id="redes"><strong>Redes Sociales</strong></h2>
-		<p id="red"><img src="img/Facebook.png" width="40" height="40">Facebook: Asesorías Online</p>
-		<p id="red"><img src="img/Instagram.png" width="40" height="40">Instagram: @desingmultisystem</p>
+		<p id="red"><img src="img/Facebook.png" width="40" height="40"><a href="https://www.facebook.com/Asesorias-Online-103433441442205/?ref=aymt_homepage_panel&eid=ARAoav3TvU3Hrk2KSXjYsJKRWSR_Epn9YmHuCKjRM-ed5zP1dNj8ImvB2n0csM38QR1QWMwLLpMhEtu_">Facebook: Asesorías Online</a></p>
+		<p id="red"><img src="img/Instagram.png" width="40" height="40"><a href="https://www.instagram.com/desingmultisystem/">Instagram: @desingmultisystem</a></p>
 	</footer>
 			
 
