Update and rename index.html to Index.html

--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,17 @@
   			alert("Ha sido Registrado");
   	}
   	</script>
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175334125-1"></script>
+	<script>
+ 	 window.dataLayer = window.dataLayer || [];
+ 	 function gtag(){dataLayer.push(arguments);}
+ 	 gtag('js', new Date());
+
+	  gtag('config', 'UA-175334125-1');
+	</script>
+
 
   	<script language="JavaScript">  var estado=true;  setTimeout("ver()",100);  function ver (){  estado=!estado;  if(estado==true)  texto1.style.visibility="visible";  else  texto1.style.visibility="hidden";  setTimeout("ver()",1200);  }  </script>
 
